--- a/Health Plus/css/style.css
+++ b/Health Plus/css/style.css
@@ -334,7 +334,7 @@ button[class ^=navbar]:hover {
 }
 
 .header-inner-left h1 span {
-    font-weight: 600;
+    font-weight: 500;
     text-transform: uppercase;
 }
 
@@ -416,6 +416,7 @@ button[class ^=navbar]:hover {
     background-color: #3983fe;
     max-width: 537px;
     position: relative;
+    bottom: 4em;
 }
 
 .about-right .img img {
@@ -433,34 +434,12 @@ button[class ^=navbar]:hover {
     height: 100%;
 }
 
-.about-right .img::after {
-    top: -56px;
-    left: 0;
-    background-color: #0060ff;
-    z-index: -1;
-}
-
-.about-right .img::before {
-    top: -112px;
-    left: 0;
-    background-color: var(--fros-blue-color);
-    z-index: -2;
-}
-
 /* banner one section */
 .banner-one {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 80, 213, 0.9)), to(rgba(0, 90, 213, 0.85))), url('../images/banner-1-img.png') top/cover no-repeat;
-    background: -o-linear-gradient(rgba(0, 80, 213, 0.9), rgba(0, 90, 213, 0.85)), url('../images/banner-1-img.png') top/cover no-repeat;
     background: linear-gradient(rgb(134,198,244), rgba(0, 90, 213, 0.85)), url('../images/banner-1-img.png') top/cover no-repeat;
     height: 480px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -524,8 +503,6 @@ button[class ^=navbar]:hover {
 
 /* banner two section */
 .banner-two {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 80, 213, 0.9)), to(rgba(0, 90, 213, 0.85))), url('../images/banner-two-bg.png') top/cover no-repeat;
-    background: -o-linear-gradient(rgba(0, 80, 213, 0.9), rgba(0, 90, 213, 0.85)), url('../images/banner-two-bg.png') top/cover no-repeat;
     background: linear-gradient(rgb(134,198,244), rgba(0, 90, 213, 0.85)), url('../images/banner-two-bg.png') top/cover no-repeat;
     padding: 13.6rem 0;
 }
@@ -542,8 +519,6 @@ button[class ^=navbar]:hover {
 
 .banner-two-right .btn-group {
     margin-top: 6rem;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -565,8 +540,6 @@ button[class ^=navbar]:hover {
     height: 440px;
     background-color: var(--light-gray);
     overflow: hidden;
-    -webkit-box-align: end;
-    -ms-flex-align: end;
     align-items: flex-end;
 }
 
@@ -576,12 +549,7 @@ button[class ^=navbar]:hover {
     left: 0;
     width: 100%;
     height: 100px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-transition: var(--transition);
-    -o-transition: var(--transition);
     transition: var(--transition);
 }
 
@@ -601,8 +569,6 @@ button[class ^=navbar]:hover {
 }
 
 .package-service {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 80, 213, 0.85)), to(rgba(0, 80, 213, 0.95))), url('../images/package-service-img.jpg') center/cover no-repeat;
-    background: -o-linear-gradient(rgba(0, 80, 213, 0.85), rgba(0, 80, 213, 0.95)), url('../images/package-service-img.jpg') center/cover no-repeat;
     background: linear-gradient(rgba(0, 80, 213, 0.85), rgba(0, 80, 213, 0.95)), url('../images/package-service-img.jpg') center/cover no-repeat;
 }
 
@@ -703,9 +669,77 @@ button[class ^=navbar]:hover {
 }
 
 /* contact section */
+
+form {
+    max-width: 800px;
+    margin: 10px auto;
+    padding: 10px 20px;
+    background: #f4f7f8;
+    border-radius: 8px;
+}
+
+#app {
+    margin: 0 0 30px 0;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+textarea,
+
+select {
+    background: rgba(255, 255, 255, 0.1);
+    border: none;
+    font-size: 16px;
+    height: auto;
+    margin: auto;
+    outline: 0;
+    padding: 8px;
+    width: 100%;
+    background-color: #e8eeef;
+    color: black;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
+    margin-bottom: 30px;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+    margin: 0 4px 8px 0;
+}
+
+select {
+    padding: 6px;
+    height: 32px;
+    border-radius: 2px;
+}
+#btn-appoint {
+    padding: 19px 39px 18px 39px;
+    color: #FFF;
+    background-color: var(--fros-blue-color);
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border: 1px 6px 6px 1px black;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+    margin-bottom: 10px;
+
+
+}
 .contact-left {
-    margin-bottom: 6rem;
-    height: 100%;
+margin-bottom: 6rem;
+height: 100%;
 }
 
 .contact-left iframe {
@@ -715,6 +749,7 @@ button[class ^=navbar]:hover {
     object-fit: cover;
 }
 
+/* 
 .contact-right {
     padding: 5rem 4rem;
 }
@@ -759,7 +794,7 @@ button[class ^=navbar]:hover {
 
 .btn-submit i {
     margin-right: 2rem;
-}
+} */
 
 /* footer */
 .footer {
